Changed main view model to be MvvM again and added styles to large data to investigate memory usage

--- a/WPF/WPF/App.xaml
+++ b/WPF/WPF/App.xaml
@@ -188,6 +188,7 @@
                                     <Condition Property="IsEnabled" Value="False"/>
                                 </MultiTrigger.Conditions>
                                 <Setter TargetName="placeholder" Property="Visibility" Value="Visible"/>
+                                <Setter TargetName="placeholder" Property="TextBlock.Text" Value="N/A"/>
                             </MultiTrigger>
                             <Trigger Property="Text" Value="{x:Null}">
                                 <Setter TargetName="placeholder" Property="Visibility" Value="Visible"/>
